--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -172,7 +172,7 @@ h6,
 .h6 {
   font-family: "Open sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  color: #333333;
+  color: #1186be;
 }
 h1 {
   font-size: 40px;
@@ -518,7 +518,7 @@ img {
   font-size: 36px;
   font-size: 2.25rem;
   letter-spacing: 1px;
-  color: #01524B
+  color: #1186be
 }
 .section-title a,
 .entry-title a {
