--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -68,8 +68,8 @@ body {
   padding: 5px 30px;
 }
 .navbar-default {
-  background-color: #fec000;
-  border-color: #fec000;
+  background-color: #febd00;
+  border-color: #febd00;
 }
 .navbar-default .navbar-nav > li > a {
   color: #454545;
@@ -232,7 +232,7 @@ a:hover {
   background-size: cover;
   background-repeat: no-repeat;
   padding: 0px 0 0px 0;
-  background-color: #fec000;
+  background-color: #febd00;
   height: 500px
 }
 /* #head img.img-circle {
@@ -415,7 +415,7 @@ img {
   display: block;
   opacity: 0;
   width: 100%;
-  height: 180px;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
   -webkit-transition-property: all;
   -moz-transition-property: all;
@@ -453,7 +453,7 @@ img {
   top: 0;
   left: 0;
   border-radius: 3px;
-  height: 180px;
+  height: 100%;
 }
 .thumbnail:hover {
   color: #333;
@@ -492,12 +492,15 @@ img {
   padding-top: 5px; 
   margin-bottom: 50px
 }
-.logos{
-  height: 300px;
-  width: auto;
-  display: block;
-  margin-left: auto;
-  margin-right: auto
+.padded_container {  
+  position: absolute;
+}
+.logos{  
+  position: relative;  
+  left: 0;  
+  top: 0;  
+  max-width: 100%;  
+  height: auto;
 }
 /*********************************************************************
 
@@ -655,102 +658,6 @@ footer.entry-meta .meta-in {
 .page-header .page-title {
   margin-top: 0;
   margin-bottom: 30px;
-}
-/*********************************************************************
-
-
-                                COMMENTS
-
-
-**********************************************************************/
-#comments {
-  font-size: 13px;
-  font-size: 0.8125rem;
-}
-#comments .comments-title {
-  margin: 0 0 5px 0;
-}
-#comments .leave-comment {
-  display: block;
-  margin: 0 0 40px 0;
-}
-#comments ul,
-#comments ol {
-  margin: 0;
-  padding: 0;
-}
-#comments .comment {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  clear: both;
-}
-#comments .comments-title {
-  text-shadow: none;
-  margin-bottom: 0;
-}
-#comments .avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-bottom: 30px;
-  border: 5px solid #eeeeee;
-  -webkit-border-radius: 50%;
-  -webkit-background-clip: padding-box;
-  -moz-border-radius: 50%;
-  -moz-background-clip: padding;
-  border-radius: 50%;
-  background-clip: padding-box;
-}
-#comments .children {
-  margin: 0 0 0 90px;
-}
-#comments .comment-meta {
-  margin: 0 0 0 90px;
-}
-#comments .comment-meta a {
-  color: #333333;
-}
-#comments .comment-meta a:hover {
-  color: #01524B;
-}
-#comments .comment-meta .author {
-  margin: 0 20px 0 0;
-  font-weight: bold;
-}
-#comments .comment-meta .date {
-  margin: 0 20px 0 0;
-}
-#comments .comment-meta .date a {
-  color: #666666;
-}
-#comments .comment-meta .reply {
-  float: right;
-}
-#comments .comment-body {
-  margin: 0 0 35px 90px;
-}
-.comment-navigation {
-  width: 100%;
-  border-top: 1px solid #ccc;
-  padding: 2px 0 0 0;
-}
-.comment-navigation .nav-content {
-  border-top: 1px solid #ccc;
-  width: 100%;
-  padding: 10px 0 0 0;
-}
-.comment-navigation .nav-previous {
-  float: left;
-  width: 50%;
-}
-.comment-navigation .nav-next {
-  float: right;
-  width: 50%;
-  text-align: right;
-}
-#respond {
-  margin: 55px 0 0 0;
 }
 /*********************************************************************
 
