--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -36,7 +36,7 @@ footer p {
   margin-bottom: .25rem;
 }
 
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+.box-shadow {  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
 
 /* original CSS */
 
@@ -49,6 +49,7 @@ body {
   font-family: "Open sans", Helvetica, Arial, sans-serif;
   color: #666666;
   padding: 0;
+  background: white;
 }
 
 /* Header */
@@ -138,7 +139,7 @@ body {
   font-size: 36px;
   font-size: 2.25rem;
   letter-spacing: 1px;
-  color: #1186be
+  color: #1186be;
 }
 
 /* Adds Double Horizontal Lines */
@@ -224,9 +225,29 @@ body {
   font-size: 12px;
   font-size: 0.75rem;
   text-transform: uppercase;
-  text-shadow: 0 1px 0px rgb(105, 172, 176);
+  /* text-shadow: 0 1px 0px rgb(105, 172, 176); */
+  background:#FF481B;
+  color: white;
+}
+
+.hover_text:hover {
   background:#98D2D5;
   color: white;
+  text-decoration: none;
+}
+
+.card-title {
+  text-transform: uppercase;
+  margin: 0 2em;
+  display: block;
+  text-indent: 0;
+}
+
+.card-body {
+  display: block;
+  text-align: center;
+  font-size: 12px;
+  font-size: 0.75rem;
 }
 
 /* git icon */
@@ -234,12 +255,43 @@ body {
   font-size: 30px;
   padding-left: 10px;
   padding-top: 5px; 
+  color: #FF481B;
   /* margin-bottom: 50px */
 }
 
-a {
-  color: #FF481B;
-}
-a:hover {
+.icon:hover {
   color: #98D2D5;
+}
+
+.card_shadow
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.card_shadow:before, .card_shadow:after
+{
+    content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:0;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.card_shadow:after
+{
+    right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
 }
