--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,7 +244,7 @@ a:hover {
   margin: 0 auto;
 } */
 #head .title {
-  font-family: "Open sans", Helvetica, Arial, sans-serif;;
+  font-family: "Open sans", Helvetica, Arial, sans-serif;
   font-size: 49px;
   font-size: 3.0625rem;
 }
