--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -301,3 +301,38 @@ font-family: 'Raleway', sans-serif; */
          -o-transform:skew(8deg) rotate(3deg);
             transform:skew(8deg) rotate(3deg);
 }
+
+/* footer */
+
+footer {
+  background: #232323;
+  padding: 30px 0 30px 0;
+}
+
+.footer-body {
+  font-size: 12px;
+  font-size: 0.75rem;
+  text-align: left;
+  padding: 0;
+  color: #999;
+}
+
+.footer-title {
+  text-transform: uppercase;
+  margin: 0 2em;
+  text-indent: 0;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.428571429;
+  text-align: left;
+  margin: 0;
+  padding-bottom: 10px;
+  color: #999;
+}
+
+.footer-icon {
+  color: #999;
+  font-size: 30px;
+  padding-left: 10px;
+  padding-top: 5px; 
+}
