--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,37 +1,43 @@
-:root {
+/* :root {
   --jumbotron-padding-top: 5rem;
   --jumbotron-padding-y: 2rem;
-}
+} */
 
 .jumbotron {
-  padding-top: var(--jumbotron-padding-top);
+  /* padding-top: var(--jumbotron-padding-top);
   padding-bottom: var(--jumbotron-padding-y);
-  margin-bottom: 0;
+  margin-bottom: 0; */
   background-color: #fff;
+  padding: 100px 0 100px 0;
+  margin: 150px 0 0 0;
 }
-@media (min-width: 768px) {
+
+.album {
+  padding: 100px 0 150px 0;
+}
+/* @media (min-width: 768px) {
   .jumbotron {
     padding-top: calc(var(--jumbotron-padding-y) * 2);
     padding-bottom: calc(var(--jumbotron-padding-y) * 2);
   }
-}
+} */
 
-.jumbotron p:last-child {
+/* .jumbotron p:last-child {
   margin-bottom: 0;
-}
+} */
 
 /* .jumbotron-heading {
   font-weight: 300;
 } */
 
-.jumbotron .container {
+/* .jumbotron .container {
   max-width: 40rem;
-}
+} */
 
-footer {
-  padding-top: 3rem;
+/* footer {
+  padding-top: 5rem;
   padding-bottom: 3rem;
-}
+} */
 
 footer p {
   margin-bottom: .25rem;
@@ -107,7 +113,6 @@ font-family: 'Raleway', sans-serif; */
   padding: 10px;
   font-weight: 200;
   font-size: 18px;
-  margin-bottom: 100px;
 }
 
 .nav:hover {
@@ -135,7 +140,7 @@ font-family: 'Raleway', sans-serif; */
   display: block;
   width: 100%;
   overflow: hidden;
-  margin: 50px 0 50px;
+  margin: 0 0 50px;
   text-align: center;
   font-weight: 300;
   text-transform: uppercase;
