--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,43 +1,47 @@
-/* :root {
+:root {
   --jumbotron-padding-top: 5rem;
   --jumbotron-padding-y: 2rem;
-} */
+}
 
 .jumbotron {
-  /* padding-top: var(--jumbotron-padding-top);
+  padding-top: var(--jumbotron-padding-top);
   padding-bottom: var(--jumbotron-padding-y);
-  margin-bottom: 0; */
+  margin-bottom: 0;
   background-color: #fff;
-  padding: 100px 0 100px 0;
-  margin: 150px 0 0 0;
+  /* padding: 100px 0 100px 0;
+  margin: 150px 0 0 0; */
 }
 
 .album {
   padding: 100px 0 150px 0;
 }
-/* @media (min-width: 768px) {
+
+.skills {
+  padding: 150px 0 50px 0;
+}
+@media (min-width: 768px) {
   .jumbotron {
     padding-top: calc(var(--jumbotron-padding-y) * 2);
     padding-bottom: calc(var(--jumbotron-padding-y) * 2);
   }
-} */
+}
 
-/* .jumbotron p:last-child {
+.jumbotron p:last-child {
   margin-bottom: 0;
-} */
+}
 
-/* .jumbotron-heading {
+.jumbotron-heading {
   font-weight: 300;
-} */
+}
 
-/* .jumbotron .container {
+.jumbotron .container {
   max-width: 40rem;
-} */
+}
 
-/* footer {
+footer {
   padding-top: 5rem;
   padding-bottom: 3rem;
-} */
+}
 
 footer p {
   margin-bottom: .25rem;
@@ -150,7 +154,7 @@ font-family: 'Raleway', sans-serif; */
 }
 
 /* double lines @ section title */
-.section-title span {
+/* .section-title span {
   display: inline-block;
   position: relative;
 }
@@ -161,9 +165,9 @@ font-family: 'Raleway', sans-serif; */
   position: absolute;
   height: 4px;
   top: .53em;
-  width: 400%;
+  width: 400%; */
   /* border-bottom: 1px solid #E0DEE2; */
-  border-top: 3px solid #E0DEE2;
+  /* border-top: 3px solid #E0DEE2;
 }
 .section-title span:before {
   right: 100%;
@@ -172,8 +176,11 @@ font-family: 'Raleway', sans-serif; */
 .section-title span:after {
   left: 100%;
   margin-left: 45px;
-}
+} */
 
+.arrow {
+  padding: 0 5px 0 5px;
+}
 /* recent work cards */
 .hover_container {
   position: relative;
@@ -324,13 +331,13 @@ font-family: 'Raleway', sans-serif; */
   display: block;
   width: 100%;
   overflow: hidden;
-  /* margin: 50px 0 50px; */
+  margin: 0 0 50px;
   text-align: center;
-  font-weight: 300;
+  font-weight: 400;
   text-transform: uppercase;
   font-size: 30px;
   /* letter-spacing: 3px; */
-  color: #333333;
+  color:  #1186be;
 }
 
 /* footer */
