--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@ font-family: 'Raleway', sans-serif; */
 }
 
 .hover_text:hover {
-  background:#98D2D5;
+  background:#A0D3F0;
   color: white;
   text-decoration: none;
 }
@@ -282,7 +282,7 @@ font-family: 'Raleway', sans-serif; */
 }
 
 .icon:hover {
-  color: #98D2D5;
+  color: #A0D3F0;
 }
 
 .card_shadow
@@ -343,16 +343,16 @@ font-family: 'Raleway', sans-serif; */
 /* footer */
 
 footer {
-  background: #232323;
+  background: #A0D3F0;
   padding: 30px 0 30px 0;
 }
 
 .footer-body {
-  font-size: 12px;
-  font-size: 0.75rem;
+  font-size: 15px;
   text-align: left;
   padding: 0;
-  color: #999;
+  color: #1186BE;
+  line-height: 1.3;
 }
 
 .footer-title {
@@ -363,17 +363,17 @@ footer {
   text-align: left;
   margin: 0;
   padding-bottom: 10px;
-  color: #999;
+  color: #1186BE;
 }
 
 .footer-icon {
-  color: #999;
+  color:  #1186BE;
   font-size: 30px;
   padding-left: 10px;
   padding-top: 5px; 
 }
 
-.top-link:hover, .top-link:focus {
+.portfolio:hover, .footer-icon:hover, .portfolio:focus, .footer-icon:focus {
   color: whitesmoke;
   text-decoration: none;
 }
