--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,8 @@ font-family: 'Raleway', sans-serif; */
   background-repeat: no-repeat;
   padding: 0px 0 0px 0;
   background-color: #febd00;
-  height: 500px
+  height: 500px;
+  width: 100%;
 }
 
 #head .title {
