--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@
 .skills {
   padding: 150px 0 50px 0;
 }
+
 @media (min-width: 768px) {
   .jumbotron {
     padding-top: calc(var(--jumbotron-padding-y) * 2);
@@ -333,7 +334,7 @@ font-family: 'Raleway', sans-serif; */
   height: auto;
 }
 
-.technical-title {
+/* .technical-title {
   display: block;
   width: 100%;
   overflow: hidden;
@@ -341,10 +342,10 @@ font-family: 'Raleway', sans-serif; */
   text-align: center;
   font-weight: 400;
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 40px;
   /* letter-spacing: 3px; */
-  color:  #1186be;
-}
+  /* color:  #1186be;
+} */ 
 
 /* footer */
 
@@ -359,13 +360,18 @@ footer {
   padding: 0;
   color: #1186BE;
   line-height: 1.3;
+  margin-bottom: 100px;
+}
+
+.about {
+  font-size: 18px;
 }
 
 .footer-title {
+
   text-transform: uppercase;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.428571429;
+  font-size: 30px;
+  font-weight: 400;
   text-align: left;
   margin: 0;
   padding-bottom: 10px;
